css changes to resolve container jumping when less employees

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,6 +43,8 @@
     flex-wrap: wrap;
     padding-bottom: 10px;
     justify-content: space-evenly;
+    align-items: flex-start;
+    min-height: 400px;
   }
 
   .employee-container {
